# polylog-dynamic-connectivity

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  stress_test.cpp
bench/: CMakeLists.txt  bench.cpp  plot.py  runner.hpp  runner_nari_hdt.cpp  runner_tomtseng_hdt.cpp  workload.cpp  workload.hpp  workload_build_then_query.cpp  workload_clique_bridges.cpp  workload_forest_path.cpp  workload_sparse_random.cpp  workload_uniform.cpp
cmake/: hdt_tomtseng.cmake
src/: CMakeLists.txt  brute_connectivity.hpp  dynamic_connectivity.cpp  dynamic_connectivity.hpp  edge.hpp  et_forest_lvl.cpp  et_forest_lvl.hpp  et_tree.cpp  et_tree.hpp  forest_lvl.hpp  naive_forest_lvl.cpp  naive_forest_lvl.hpp
src/bbst/: CMakeLists.txt  splay_tree.hpp
